test/tests/stages/18_structures/invalid_parse/dot_invalid_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  struct
  identifier(s)
  {
  int
  identifier(y)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(x)
  .
  (
  identifier(y)
  )
  ;
  }
